fix(table): update column visibility style
Close #6

--- a/themes/boodark/scss/_variables.scss
+++ b/themes/boodark/scss/_variables.scss
@@ -38,6 +38,7 @@ $pma-cyan:    #0dcaf0;
 $pma-body-color:              $white;
 $pma-body-bg:                 $pma-gray-900;
 $pma-component-bg:            $pma-gray-800;
+$pma-component-hover-bg:      $pma-gray-600;
 $pma-table-bg:                $pma-gray-700;
 $pma-selected-bg:             $pma-gray-700;
 $pma-fieldset-bg:             $pma-gray-600;
